1999-08-19  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid.c (gnome_druid_size_allocate): Patch from damon to
	put the child in the right place.
	(gnome_druid_expose): Now I have achieved further enlightenment in
	the ways of writing a GtkContainer.
	(gnome_druid_draw): Thanks Owen/HP.  Further Container-hood.

1999-08-19  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-entry.c (show_icon_selection): Patch from 
	David Meybohm <dm89754@ucf.edu> fixes a race condition
	segfault (set iconsel as user data before any possibility
	we might ask for user data)

1999-08-18  Havoc Pennington  <hp@pobox.com>

	* gnome-entry.c (gnome_entry_init): Set combo case-insensitive.
	Closes bug 1939.
	
1999-08-17  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.h: Mark new_aa() experimental

	* gnome-dialog-util.h: request_string_dialog() is 
	deprecated.

	* gnome-messagebox.h: Couple deprecated routines in here...

	* gnome-propertybox.h: Deprecate couple of these

	* libgnomeui.h: Deprecate/experimentalize some stuff

1999-08-17  Tim P. Gerla  <timg@means.net>

	* gnome-less.c: Add documentation

1999-08-17  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas-line.c (gnome_canvas_line_set_arg): Typo fix; do
	set the gc foreground if the canvas is not AA.

	* gnome-canvas-text.c (gnome_canvas_text_set_arg): Likewise.

1999-08-17  Jonathan Blandford  <jrb@redhat.com>

	* gnome-popup-help.c (helpwindow_destroy_callback): remove
	debugging statements.

	* gnome-druid.c (gnome_druid_remove): many changes to make us act
	as a nicer container.

1999-08-16  Havoc Pennington  <hp@pobox.com>

	* gnome-druid.c (gnome_druid_destroy): chain up to parent's
	destroy method

1999-08-16  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid-page-standard.c (gnome_druid_page_standard_init):
	cleaned up the druid a little.

1999-08-13  Federico Mena Quintero  <federico@redhat.com>

	* gnome-icon-list.c (gil_button_press): Do not rubberband-select
	if we are already selecting.
