@@ -1,3 +1,10 @@
+1999-08-19  Federico Mena Quintero  <federico@redhat.com>
+
+	* gnome-canvas-image.c (free_pixmap_and_mask): Sigh.  Tell imlib
+	to *only* free the pixmap, not the mask as well.  When you tell
+	imlib to free a pixmap, it will also free its associated mask.  Is
+	that broken, or what?
+
 1999-08-19  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-druid.c (gnome_druid_size_allocate): Patch from damon to
